[package]
name = "pow_challenge_server_http"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
axum = { version = "0.7.4", features = ["http2"] }
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11.24", features = ["json"] }
dashmap = "5.5.3"

[lib]
name = "pow_challenge_server_http_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"